// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given useScreenSize hook should match the snapshot 1`] = `
Object {
  "rerender": [Function],
  "result": Object {
    "current": Array [
      1001,
      100,
    ],
    "error": undefined,
  },
  "unmount": [Function],
  "wait": [Function],
  "waitFor": [Function],
  "waitForNextUpdate": [Function],
  "waitForValueToChange": [Function],
}
`;

exports[`Given useScreenSize hook when passed a container should match the snapshot 1`] = `
Object {
  "rerender": [Function],
  "result": Object {
    "current": Array [
      125,
      120,
    ],
    "error": undefined,
  },
  "unmount": [Function],
  "wait": [Function],
  "waitFor": [Function],
  "waitForNextUpdate": [Function],
  "waitForValueToChange": [Function],
}
`;
